--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-<h1>My Summer Vacation</h1>
+<h1>My Summer Vacation!</h1>
 <p>I went on vacation with my family and friends.</p>
 <p>We went to Virginia Beach.</p>
 
