--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Brooklyn's Webpage</title>
 <meta charset="utf-8">
-<link href=""https://student.nvcc.edu/bcc9468/styles.css" rel="stylesheet">
+<link href="styles.css" rel="stylesheet">
 </head>
 <body>
 <h1>My Summer Vacation!</h1>
